welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
  for (i<-0 to (nums.length)-1) {
^